--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
       --radius: 16px;
     }
 
-    /* FUNDO / BASE */
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
@@ -140,7 +139,6 @@
     .no { background:#f44336; color:#fff }
     .why{ background:#ff9800; color:#fff; position:relative; overflow:visible }
 
-    /* Destaque no botão "Por que..." + mãozinha apontando */
     .why.attn{ animation: why-pulse 1.4s ease-in-out infinite; box-shadow: 0 0 0 0 rgba(255,152,0,.55); }
     .why.attn::before{
       content:""; position:absolute; inset:-6px; border-radius:12px;
@@ -148,7 +146,7 @@
       filter: blur(8px); opacity:.75; pointer-events:none; animation: glow 2.2s ease-in-out infinite;
     }
     .why.attn::after{
-      content:"👈"; /* aponta para o botão a partir da direita */
+      content:"👈";
       position:absolute; right:-36px; top:50%;
       transform:translateY(-50%) rotate(10deg);
       font-size:22px; text-shadow:0 2px 6px rgba(0,0,0,.35);
@@ -165,14 +163,12 @@
 
     .btn .emo{ margin-left:.35em; display:inline-block; transform:translateY(1px) }
 
-    /* Modal simples (Não tenho chance!) */
     .dialog-overlay{ display:none; position:fixed; inset:0; background:rgba(0,0,0,.5); justify-content:center; align-items:center; padding:16px; z-index:50; }
     .dialog-box{ width:min(420px,92vw); background:rgba(255,255,255,.96); border-radius:12px; padding:20px; text-align:center; box-shadow:0 12px 36px rgba(0,0,0,.35); backdrop-filter:blur(2px); }
     .dialog-box p{ margin:0 0 16px; font-size: clamp(1rem, 3.5vw, 1.125rem); color:#333 }
     .dialog-buttons{ display:flex; gap:12px; justify-content:center; }
     .dialog-buttons button{ padding:10px 18px; border:none; border-radius:8px; font-size:1rem; cursor:pointer }
 
-    /* ===== Acrônimo M A R I A N A ===== */
     #acronymFull{
       width:min(860px,92vw);
       margin:16px auto 0;
@@ -263,54 +259,105 @@
   </div>
 
   <!-- Áudios -->
-  <audio id="bgm" preload="auto" playsinline><source src="kennyg.mp3" type="audio/mpeg"></audio>
-  <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></audio>
-  <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></audio>
+  <!-- ⚠️ Este é o fundo da página index: KENNYG -->
+  <audio id="bgm" preload="auto" playsinline>
+    <source src="kennyg.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="feliznavida-audio" preload="auto" playsinline>
+    <source src="feliznavida.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="sadsong-audio" preload="auto" playsinline>
+    <source src="sadsong.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
-    /* ===== Música de fundo (kennyg) ===== */
+    /* ===== Música de fundo (kennyg) com atraso de 3s e sem sobreposição ===== */
     const AUTOPLAY_DELAY_MS = 3000;
     let bgmStarted = false;
+    let autoplayTimer = null;
+
+    function clearAutoplayTimer(){
+      if (autoplayTimer) { clearTimeout(autoplayTimer); autoplayTimer = null; }
+    }
 
     async function startBGM() {
       const a = document.getElementById('bgm');
-      if (!a) return false;
+      if (!a || bgmStarted) return false;
       try { a.volume = 0.6; await a.play(); bgmStarted = true; return true; } catch(e) { return false; }
     }
-    function playBGMNow(){ const a = document.getElementById('bgm'); if (!a) return; a.volume = 0.6; a.play().catch(()=>{}); bgmStarted = true; }
-    function pauseBGM(){ const a = document.getElementById('bgm'); if (a && !a.paused) a.pause(); }
+    function playBGMNow(){
+      const a = document.getElementById('bgm');
+      if (!a) return;
+      clearAutoplayTimer();
+      a.volume = 0.6;
+      a.play().catch(()=>{});
+      bgmStarted = true;
+    }
+    function pauseBGM(){
+      const a = document.getElementById('bgm');
+      if (a && !a.paused) a.pause();
+      bgmStarted = false;
+    }
     function setupAutoplay() {
-      setTimeout(startBGM, AUTOPLAY_DELAY_MS);
-      document.addEventListener('visibilitychange', ()=>{ if (document.visibilityState === 'visible') startBGM(); });
-      requestAnimationFrame(startBGM);
-      window.addEventListener('pageshow', startBGM);
+      clearAutoplayTimer();
+      autoplayTimer = setTimeout(startBGM, AUTOPLAY_DELAY_MS);
+
+      document.addEventListener('visibilitychange', ()=>{
+        if (document.visibilityState === 'hidden') {
+          clearAutoplayTimer();
+          pauseBGM();
+        } else if (!bgmStarted) {
+          startBGM();
+        }
+      });
+      window.addEventListener('pageshow', ()=>{ if (!bgmStarted) startBGM(); });
+      window.addEventListener('beforeunload', clearAutoplayTimer);
+      requestAnimationFrame(()=>{}); // noop para manter gesture chain
     }
 
     /* ===== SadSong no modal ===== */
-    function playSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; sad.loop = true; sad.volume = 0.5; try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){} }
-    function stopSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; try { sad.pause(); } catch(e){} sad.currentTime = 0; sad.loop = false; }
+    function playSadLoop(){
+      const sad = document.getElementById('sadsong-audio');
+      if (!sad) return;
+      pauseBGM();
+      sad.loop = true; sad.volume = 0.5;
+      try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){}
+    }
+    function stopSadLoop(){
+      const sad = document.getElementById('sadsong-audio');
+      if (!sad) return;
+      try { sad.pause(); } catch(e){}
+      sad.currentTime = 0; sad.loop = false;
+    }
 
     async function playFromElementOrNew(id, src, volume=0.5){
       const el=document.getElementById(id);
       const tryP=async a=>{try{a.volume=volume;a.currentTime=0;await a.play();return true}catch{return false}};
-      if(el && await tryP(el)) return true;
+      if(el){
+        pauseBGM();
+        stopSadLoop();
+        if (await tryP(el)) return true;
+      }
       const dyn=new Audio(src); dyn.preload='auto'; dyn.volume=volume;
+      pauseBGM(); stopSadLoop();
       return await tryP(dyn);
     }
 
     async function aceitou(){
-      pauseBGM(); stopSadLoop();
       await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
-
       const msg = encodeURIComponent(`💚 Vínculo seguro em formação. Risco de apego saudável confirmado.
 Indicação: se você sentir vontade, podemos marcar algo — uma boa conversa… ou simplesmente estar perto, do jeito mais leve possível.`);
       setTimeout(()=>{ window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500);
     }
 
-    function abrirPagina(){ pauseBGM(); stopSadLoop(); window.location.href="pagina.html"; }
+    function abrirPagina(){
+      clearAutoplayTimer();
+      pauseBGM();
+      stopSadLoop();
+      window.location.href="pagina.html";
+    }
 
     function mostrarMensagemNao(){
-      pauseBGM();
       playSadLoop();
       const overlay = document.getElementById('dialogo');
       const boxText = document.getElementById('dialogMsg');
@@ -341,13 +388,11 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       setTimeout(()=>{ span.style.opacity='0'; setTimeout(()=>{ span.textContent=c; span.style.opacity='1'; index++; setTimeout(digitarSequencial,nextDelayFor(c)); },FADE_DURATION); },REVEAL_DELAY);
     }
 
-    /* ===== Emoji do título ===== */
     const emojiList=["🤩","🥰","😍","💖"], emojiEl=document.getElementById("emojiCycler"); let emojiIndex=0;
     function cycleEmoji(){ emojiEl.style.opacity='0'; setTimeout(()=>{ emojiIndex=(emojiIndex+1)%emojiList.length; emojiEl.textContent=emojiList[emojiIndex]; emojiEl.style.opacity='1'; },260); }
 
-    /* ===== Acrônimos M A R I A N A ===== */
-    const ACRONYM_BLOCK = `
----ACRONIMOS_POR_LETRA---
+    /* ===== Acrônimos ===== (mantidos) */
+    const ACRONYM_BLOCK = `---ACRONIMOS_POR_LETRA---
 [M]
 - Meu motivo de sorrir
 - Minha palmeirense preferida
@@ -412,8 +457,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
 - Nível máximo de encanto
 - Nunca te trocaria por nada
 - Nos meus planos, sempre você
----FIM---
-`;
+---FIM---`;
     function parseGroup(block, letter){
       const re=new RegExp(`\\[${letter}\\]([\\s\\S]*?)(?=\\n\\[|---FIM---)`,'m');
       const m=block.match(re); if(!m) return [];
@@ -461,7 +505,6 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const full=document.getElementById('acronymFull'); if(!full) return;
       const wrapper=buildWrapper(lines);
 
-      // mede a nova altura sem "piscada"
       const meas=full.cloneNode(false);
       meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto;';
       meas.style.width=full.clientWidth+'px';
@@ -494,7 +537,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
     }
     function nextAcronym(){ currentSet=(currentSet+1)%ACRONYM_SETS.length; swapAcronym(ACRONYM_SETS[currentSet]); }
 
-    const CYCLE_MS = 5000; /* +1s visível vs versão anterior */
+    const CYCLE_MS = 5000;
     window.addEventListener('load', ()=>{
       const why = document.getElementById('whyBtn');
       setInterval(()=>{ if(why) { why.classList.add('wiggle'); setTimeout(()=>why.classList.remove('wiggle'), 600); } }, 5200);
