--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     .btn:active{ transform:scale(.98) } .btn:hover{ filter:brightness(1.06) }
     .yes{ background:#4CAF50; color:#fff } .no{ background:#f44336; color:#fff } .why{ background:#ff9800; color:#fff; position:relative; overflow:visible }
 
+    /* Botão “Por que…” com destaque e setinha */
     .why.attn{ animation: why-pulse 1.4s ease-in-out infinite; box-shadow: 0 0 0 0 rgba(255,152,0,.55); }
     .why.attn::before{
       content:""; position:absolute; inset:-6px; border-radius:12px;
@@ -98,10 +99,13 @@
 
     .btn .emo{ margin-left:.35em; display:inline-block; transform:translateY(1px) }
 
-    /* Modal simples só com a mensagem */
+    /* Modal com a mensagem */
     .dialog-overlay{ display:none; position:fixed; inset:0; background:rgba(0,0,0,.5); justify-content:center; align-items:center; padding:16px; }
-    .dialog-box{ width:min(420px,92vw); background:rgba(255,255,255,.96); border-radius:12px; padding:20px; text-align:center; box-shadow:0 12px 36px rgba(0,0,0,.35); backdrop-filter:blur(2px); }
-    .dialog-box p{ margin:0 0 16px; font-size:18px; color:#333 }
+    .dialog-box{ width:min(460px,92vw); background:rgba(255,255,255,.96); border-radius:12px; padding:20px; text-align:center; box-shadow:0 12px 36px rgba(0,0,0,.35); backdrop-filter:blur(2px); }
+    .dialog-box p{
+      margin:0 0 16px; font-size:18px; color:#333;
+      white-space: pre-wrap; /* mantém quebras de linha do texto */
+    }
     .dialog-buttons{ display:flex; gap:12px; justify-content:center; }
     .dialog-buttons button{ padding:10px 18px; border:none; border-radius:8px; font-size:16px; cursor:pointer }
 
@@ -146,7 +150,7 @@
     .fx-wipe .text{ will-change:clip-path,transform,opacity; }
     .fx-wipe.in .text{ animation:wipe-in 520ms calc(var(--d,0ms) + 120ms) cubic-bezier(.22,.7,.16,1) both; }
     .fx-wipe.out .text{ animation:row-out 320ms var(--d,0ms) ease-in both; }
-    /* ✅ garante que a LINHA toda também desapareça (inclui as letras) */
+    /* Linha toda sai junta (evita letras “perdidas”) */
     .fx-wipe.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
 
     @keyframes wipe-in{from{clip-path:inset(0 100% 0 0);transform:translateY(4px);opacity:0}
@@ -155,7 +159,7 @@
     .fx-flip .text{ transform-origin:left center; will-change:transform,opacity; }
     .fx-flip.in  .text{ animation:flip-in 520ms calc(var(--d,0ms) + 90ms) cubic-bezier(.2,.8,.2,1) both; }
     .fx-flip.out .text{ animation:row-out 300ms var(--d,0ms) ease-in both; }
-    /* ✅ idem para flip: linha toda some junto */
+    /* Linha toda some junto */
     .fx-flip.out{ animation:row-out 320ms var(--d,0ms) ease-in both; }
 
     @keyframes flip-in{from{transform:rotateX(-75deg);opacity:0;filter:blur(2px)}
@@ -242,9 +246,16 @@ Indicação: se você sentir vontade, podemos marcar algo uma boa conversa… ou
     function mostrarMensagemNao(){
       pauseBGM();
       playSadLoop();
+
       const overlay = document.getElementById('dialogo');
       const boxText = document.getElementById('dialogMsg');
-      boxText.textContent = 'Espero que tenha soado leve, respeitoso e com carinho. Estarei disponível, no seu tempo quando (e se) você quiser.';
+
+      const mensagem = `Espero, de coração, que isso tenha sido recebido de forma leve, com respeito e carinho.
+Continuo aqui, no seu tempo, se e quando fizer sentido pra você.
+
+E, acima de tudo, espero que isso não interfira na nossa amizade, que é algo que eu realmente valorizo muito.`;
+
+      boxText.textContent = mensagem;
       overlay.style.display = 'flex';
     }
 
@@ -380,12 +391,12 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       lines.forEach((txt,i)=>{
         const row=document.createElement('div');
         const fx=FX_TYPES[Math.floor(Math.random()*FX_TYPES.length)];
-        row.className=`row fx-${fx} in`; 
+        row.className=`row fx-${fx} in`;
         row.dataset.fx=fx;
-        row.style.setProperty('--d','0ms');              // ✅ entrada sem escalonamento
+        row.style.setProperty('--d','0ms');        /* entrada sem escalonamento */
         const chip=document.createElement('div'); 
         chip.className='letter anim'; 
-        chip.style.setProperty('--delay','0ms');         // ✅ letras entram juntas
+        chip.style.setProperty('--delay','0ms');    /* letras entram juntas */
         chip.textContent=letters[i]||'';
         const span=document.createElement('div'); span.className='text'; span.textContent=txt;
         row.appendChild(chip); row.appendChild(span); wrapper.appendChild(row);
@@ -397,7 +408,7 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const full=document.getElementById('acronymFull'); if(!full) return;
       const wrapper=buildWrapper(lines);
 
-      // medir nova altura sem "piscar"
+      /* medir nova altura sem “piscar” */
       const meas=full.cloneNode(false);
       meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto;';
       meas.style.width=full.clientWidth+'px';
@@ -423,9 +434,9 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       const rows=[...full.querySelectorAll('.row')];
 
       if(!rows.length){ renderFullAcronym(lines); swapBusy=false; return; }
-      // ✅ saída sem escalonamento (todas juntas)
+      /* saída sem escalonamento (tudo junto) */
       rows.forEach((r)=>{ r.classList.remove('in'); r.classList.add('out'); r.style.setProperty('--d','0ms'); });
-      const outTotal = 360; // tempo da animação de saída
+      const outTotal = 360; // ms
 
       setTimeout(()=>{ renderFullAcronym(lines); swapBusy=false; }, outTotal);
     }
