--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
       pauseBGM(); stopSadLoop();
       await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
 
-      const msg = encodeURIComponent(`💚 Vínculo seguro em formação. Risco de apego saudável confirmado.
-Indicação: se você sentir vontade, podemos marcar algo uma boa conversa… ou simplesmente estar perto, do jeito mais leve possível.`);
+      /* 🔁 MENSAGEM DO WHATSAPP ATUALIZADA */
+      const msg = encodeURIComponent('Você tem uma chance Matheusão !!🤩💚');
       setTimeout(()=>{ window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500);
     }
 
