--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
 
       /* 🔁 MENSAGEM DO WHATSAPP ATUALIZADA */
-      const msg = encodeURIComponent('Você tem uma chance Matheusão !!🤩💚');
+      const msg = encodeURIComponent('Você tem chance Matheusão !!🤩💚');
       setTimeout(()=>{ window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500);
     }
 
@@ -464,3 +464,4 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
   </script>
 </body>
 </html>
+
