--- a/index.html
+++ b/index.html
@@ -53,48 +53,43 @@
   </script>
 
   <style>
-    /* ===== BASE ===== */
-    :root{ --bg-dim: .75; } /* escurece o preenchimento borrado p/ legibilidade */
-
+    :root{ --bg-dim: .75; }
     body{
       margin:0;
       min-height:100svh;
-      background:#000; /* fica por trás do blur */
+      background:#000;
       text-align:center;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
     }
 
-    /* Palco centraliza o conteúdo e carrega a imagem via CSS var --hero */
     .stage{
       position:relative;
       min-height:100svh;
       display:grid;
       place-items:center;
       padding:clamp(16px,4vw,32px);
-      overflow:hidden; /* corta o blur que passa da tela */
+      overflow:hidden;
     }
 
-    /* Camadas de fundo */
-    .bg{ position:absolute; inset:0; z-index:0; pointer-events:none; }
-    .bg-fill, .bg-photo{ position:absolute; inset:0; background-position:center; background-repeat:no-repeat; }
-
-    /* preenchimento borrado com cover (preenche as laterais) */
+    /* camada borrada de preenchimento (cover) */
     .bg-fill{
-      background-size:cover;
+      position:absolute; inset:0;
+      background-position:center; background-repeat:no-repeat; background-size:cover;
       filter: blur(16px) brightness(var(--bg-dim));
-      transform: scale(1.05); /* evita borda do blur */
+      transform: scale(1.05);
+      z-index:0; pointer-events:none;
     }
 
-    /* foto nítida por cima, inteira (contain) */
-    .bg-photo{
-      background-size:contain;
-      /* sem blur; imagem por completo */
+    /* a foto em si, inteira */
+    .scene{
+      position:absolute; inset:0;
+      width:100%; height:100%;
+      object-fit:contain; object-position:center;
+      z-index:1; pointer-events:none; /* não captura cliques */
     }
 
-    /* ===== CARD ===== */
     .card{
-      position:relative;
-      z-index:2;
+      position:relative; z-index:2;
       width:min(600px,94vw);
       background:rgba(0,0,0,.55);
       color:#fff;
@@ -169,7 +164,7 @@
     .dialog-buttons{ display:flex; gap:12px; justify-content:center; }
     .dialog-buttons button{ padding:10px 18px; border:none; border-radius:8px; font-size:16px; cursor:pointer }
 
-    /* ===== Acrônimos (MARIANA) ===== */
+    /* Acrônimos */
     #acronymFull{
       width:min(860px,92vw);
       margin:16px auto 0; padding:12px 16px;
@@ -194,7 +189,6 @@
       content:""; position:absolute; inset:-30% -140%;
       background:linear-gradient(120deg,transparent 40%,rgba(255,255,255,.85) 50%,transparent 60%);
       transform:translateX(-100%); animation:shine 1.6s calc(var(--delay,0ms) + 260ms) ease-out 1;
-      pointer-events:none;
     }
     @keyframes pop-in{0%{transform:scale(.6) translateY(8px) rotate(-8deg);opacity:0;filter:blur(1px)}
       60%{transform:scale(1.05) translateY(-1px);opacity:1;filter:blur(0)}100%{transform:scale(1)}}
@@ -222,13 +216,12 @@
   </style>
 </head>
 <body>
-  <!-- Troque a imagem aqui (uma vez só) -->
+  <!-- Troque a imagem aqui (uma vez no CSS var) -->
   <div class="stage" style="--hero: url('IMG_20250823_124847408.jpg')">
-    <!-- Fundo com duas camadas -->
-    <div class="bg" aria-hidden="true">
-      <div class="bg-fill"  style="background-image: var(--hero);"></div>
-      <div class="bg-photo" style="background-image: var(--hero);"></div>
-    </div>
+    <!-- Preenchimento borrado -->
+    <div class="bg-fill" style="background-image: var(--hero);" aria-hidden="true"></div>
+    <!-- A foto em si (inteira) -->
+    <img class="scene" src="IMG_20250823_124847408.jpg" alt="" aria-hidden="true"/>
 
     <div class="card">
       <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
@@ -264,63 +257,24 @@
   <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></source></audio>
   <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></source></audio>
 
-  <!-- ====== JS original (sem alterações) ====== -->
+  <!-- ====== JS original (igual ao da Versão A) ====== -->
   <script>
     const AUTOPLAY_DELAY_MS = 3000;
     let bgmStarted = false;
-
-    async function startBGM() {
-      const a = document.getElementById('bgm');
-      if (!a) return false;
-      try { a.volume = 0.6; await a.play(); bgmStarted = true; return true; } catch(e) { return false; }
-    }
+    async function startBGM() { const a = document.getElementById('bgm'); if (!a) return false; try { a.volume = 0.6; await a.play(); bgmStarted = true; return true; } catch(e) { return false; } }
     function playBGMNow(){ const a = document.getElementById('bgm'); if (!a) return; a.volume = 0.6; a.play().catch(()=>{}); bgmStarted = true; }
     function pauseBGM(){ const a = document.getElementById('bgm'); if (a && !a.paused) a.pause(); }
-    function setupAutoplay() {
-      setTimeout(startBGM, AUTOPLAY_DELAY_MS);
-      document.addEventListener('visibilitychange', ()=>{ if (document.visibilityState === 'visible') startBGM(); });
-      requestAnimationFrame(startBGM);
-      window.addEventListener('pageshow', startBGM);
-    }
-
+    function setupAutoplay() { setTimeout(startBGM, AUTOPLAY_DELAY_MS); document.addEventListener('visibilitychange', ()=>{ if (document.visibilityState === 'visible') startBGM(); }); requestAnimationFrame(startBGM); window.addEventListener('pageshow', startBGM); }
     function playSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; sad.loop = true; sad.volume = 0.5; try { sad.currentTime = 0; sad.play().catch(()=>{}); } catch(e){} }
     function stopSadLoop(){ const sad = document.getElementById('sadsong-audio'); if (!sad) return; try { sad.pause(); } catch(e){} sad.currentTime = 0; sad.loop = false; }
-
-    async function playFromElementOrNew(id, src, volume=0.5){
-      const el=document.getElementById(id);
-      const tryP=async a=>{try{a.volume=volume;a.currentTime=0;await a.play();return true}catch{return false}};
-      if(el && await tryP(el)) return true;
-      const dyn=new Audio(src); dyn.preload='auto'; dyn.volume=volume;
-      return await tryP(dyn);
-    }
-
-    async function aceitou(){
-      pauseBGM(); stopSadLoop();
-      await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5);
-      const msg = encodeURIComponent('Você tem chance Matheusão !!🤩💚');
-      setTimeout(()=>{ window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500);
-    }
-
+    async function playFromElementOrNew(id, src, volume=0.5){ const el=document.getElementById(id); const tryP=async a=>{try{a.volume=volume;a.currentTime=0;await a.play();return true}catch{return false}}; if(el && await tryP(el)) return true; const dyn=new Audio(src); dyn.preload='auto'; dyn.volume=volume; return await tryP(dyn); }
+    async function aceitou(){ pauseBGM(); stopSadLoop(); await playFromElementOrNew('feliznavida-audio','feliznavida.mp3',0.5); const msg = encodeURIComponent('Você tem chance Matheusão !!🤩💚'); setTimeout(()=>{ window.location.href=`https://wa.me/5518996259121?text=${msg}`; },4500); }
     function abrirPagina(){ pauseBGM(); stopSadLoop(); window.location.href="pagina.html"; }
-
-    function mostrarMensagemNao(){
-      pauseBGM();
-      playSadLoop();
-      const overlay = document.getElementById('dialogo');
-      const boxText = document.getElementById('dialogMsg');
-      const mensagem = `Espero, de coração, que isso tenha sido recebido de forma leve, com respeito e carinho.
+    function mostrarMensagemNao(){ pauseBGM(); playSadLoop(); const overlay = document.getElementById('dialogo'); const boxText = document.getElementById('dialogMsg'); const mensagem = `Espero, de coração, que isso tenha sido recebido de forma leve, com respeito e carinho.
 Continuo aqui, no seu tempo, se e quando fizer sentido pra você.
 
-E, acima de tudo, espero que isso não interfira na nossa amizade, que é algo que eu realmente valorizo muito.`;
-      boxText.textContent = mensagem;
-      overlay.style.display = 'flex';
-    }
-    function fecharDialogo(){
-      document.getElementById('dialogo').style.display='none';
-      stopSadLoop();
-      playBGMNow();
-    }
-
+E, acima de tudo, espero que isso não interfira na nossa amizade, que é algo que eu realmente valorizo muito.`; boxText.textContent = mensagem; overlay.style.display = 'flex'; }
+    function fecharDialogo(){ document.getElementById('dialogo').style.display='none'; stopSadLoop(); playBGMNow(); }
     const texto =
 `Acho que tô precisando de terapia… ando com uns sintomas meio suspeitos: coração acelerado, sorriso bobo e uma vontade de te ver todo dia.
 Sinceramente? Tô começando a desconfiar que o diagnóstico é você.
@@ -337,12 +291,10 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
       span.style.transition=`opacity ${FADE_DURATION}ms ease`; destino.appendChild(span);
       setTimeout(()=>{ span.style.opacity='0'; setTimeout(()=>{ span.textContent=c; span.style.opacity='1'; index++; setTimeout(digitarSequencial,nextDelayFor(c)); },FADE_DURATION); },REVEAL_DELAY);
     }
-
     const emojiList=["🤩","🥰","😍","💖"], emojiEl=document.getElementById("emojiCycler"); let emojiIndex=0;
     function cycleEmoji(){ emojiEl.style.opacity='0'; setTimeout(()=>{ emojiIndex=(emojiIndex+1)%emojiList.length; emojiEl.textContent=emojiList[emojiIndex]; emojiEl.style.opacity='1'; },260); }
 
-    const ACRONYM_BLOCK = `
----ACRONIMOS_POR_LETRA---
+    const ACRONYM_BLOCK = `---ACRONIMOS_POR_LETRA---
 [M]
 - Meu motivo de sorrir
 - Minha palmeirense preferida
@@ -407,109 +359,28 @@ Com todo respeito, é claro… mas será que eu teria alguma chance com você?`;
 - Nível máximo de encanto
 - Nunca te trocaria por nada
 - Nos meus planos, sempre você
----FIM---
-`;
-    function parseGroup(block, letter){
-      const re=new RegExp(`\\[${letter}\\]([\\s\\S]*?)(?=\\n\\[|---FIM---)`,'m');
-      const m=block.match(re); if(!m) return [];
-      return m[1].split('\n').map(l=>l.replace(/^\\s*-\\s*/,'').trim()).filter(Boolean);
-    }
+---FIM---`;
+    function parseGroup(block, letter){ const re=new RegExp(`\\[${letter}\\]([\\s\\S]*?)(?=\\n\\[|---FIM---)`,'m'); const m=block.match(re); if(!m) return []; return m[1].split('\n').map(l=>l.replace(/^\\s*-\\s*/,'').trim()).filter(Boolean); }
     const GROUPS={ M:parseGroup(ACRONYM_BLOCK,'M'), A:parseGroup(ACRONYM_BLOCK,'A'), R:parseGroup(ACRONYM_BLOCK,'R'), I:parseGroup(ACRONYM_BLOCK,'I'), N:parseGroup(ACRONYM_BLOCK,'N') };
     function pickOne(arr,avoid){ const pool=arr.filter(x=>x!==avoid); return pool.length?pool[Math.floor(Math.random()*pool.length)]:(arr[0]||''); }
     function pickDistinctA(aArr,used,avoid){ const pool=aArr.filter(x=>!used.has(x)&&x!==avoid); if(!pool.length){ const fb=aArr.filter(x=>x!==avoid); return fb.length?fb[Math.floor(Math.random()*fb.length)]:(aArr[0]||''); } return pool[Math.floor(Math.random()*pool.length)]; }
-    function makeAcronymSets(count=20){
-      const sets=[], lastByPos=Array(7).fill(null);
-      for(let s=0;s<count;s++){
-        const usedA=new Set();
-        const l0=pickOne(GROUPS.M,lastByPos[0]);
-        const l1=pickDistinctA(GROUPS.A,usedA,lastByPos[1]); usedA.add(l1);
-        const l2=pickOne(GROUPS.R,lastByPos[2]);
-        const l3=pickOne(GROUPS.I,lastByPos[3]);
-        const l4=pickDistinctA(GROUPS.A,usedA,lastByPos[4]); usedA.add(l4);
-        const l5=pickOne(GROUPS.N,lastByPos[5]);
-        const l6=pickDistinctA(GROUPS.A,usedA,lastByPos[6]);
-        const set=[l0,l1,l2,l3,l4,l5,l6];
-        for(let i=0;i<7;i++) lastByPos[i]=set[i];
-        sets.push(set);
-      }
-      return sets;
-    }
-
+    function makeAcronymSets(count=20){ const sets=[], lastByPos=Array(7).fill(null); for(let s=0;s<count;s++){ const usedA=new Set(); const l0=pickOne(GROUPS.M,lastByPos[0]); const l1=pickDistinctA(GROUPS.A,usedA,lastByPos[1]); usedA.add(l1); const l2=pickOne(GROUPS.R,lastByPos[2]); const l3=pickOne(GROUPS.I,lastByPos[3]); const l4=pickDistinctA(GROUPS.A,usedA,lastByPos[4]); usedA.add(l4); const l5=pickOne(GROUPS.N,lastByPos[5]); const l6=pickDistinctA(GROUPS.A,usedA,lastByPos[6]); const set=[l0,l1,l2,l3,l4,l5,l6]; for(let i=0;i<7;i++) lastByPos[i]=set[i]; sets.push(set);} return sets; }
     let ACRONYM_SETS=[], currentSet=0, swapBusy=false;
     const FX_TYPES=['rise','wipe','flip'];
-
-    function buildWrapper(lines){
-      const letters=['M','A','R','I','A','N','A'];
-      const wrapper=document.createElement('div');
-      lines.forEach((txt,i)=>{
-        const row=document.createElement('div');
-        const fx=FX_TYPES[Math.floor(Math.random()*FX_TYPES.length)];
-        row.className=`row fx-${fx} in`;
-        row.dataset.fx=fx;
-        row.style.setProperty('--d','0ms');
-        const chip=document.createElement('div'); 
-        chip.className='letter anim'; 
-        chip.style.setProperty('--delay','0ms');
-        chip.textContent=letters[i]||'';
-        const span=document.createElement('div'); span.className='text'; span.textContent=txt;
-        row.appendChild(chip); row.appendChild(span); wrapper.appendChild(row);
-      });
-      return wrapper;
-    }
-
-    function renderFullAcronym(lines){
-      const full=document.getElementById('acronymFull'); if(!full) return;
-      const wrapper=buildWrapper(lines);
-
-      const meas=full.cloneNode(false);
-      meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto;';
-      meas.style.width=full.clientWidth+'px';
-      meas.appendChild(wrapper.cloneNode(true));
-      full.parentNode.appendChild(meas);
-      const newH=meas.scrollHeight; meas.remove();
-
-      const currentH=full.offsetHeight || 0;
-      const targetH=Math.max(currentH, newH);
-      full.style.height=targetH+'px';
-
-      full.innerHTML='';
-      full.appendChild(wrapper);
-
-      requestAnimationFrame(()=>{ full.style.height=newH+'px'; });
-      const onEnd=e=>{ if(e.propertyName==='height'){ full.style.height='auto'; full.removeEventListener('transitionend',onEnd); } };
-      full.addEventListener('transitionend',onEnd);
-    }
-
-    function swapAcronym(lines){
-      if(swapBusy) return; swapBusy=true;
-      const full=document.getElementById('acronymFull');
-      const rows=[...full.querySelectorAll('.row')];
-
-      if(!rows.length){ renderFullAcronym(lines); swapBusy=false; return; }
-      rows.forEach((r)=>{ r.classList.remove('in'); r.classList.add('out'); r.style.setProperty('--d','0ms'); });
-      const outTotal = 360;
-
-      setTimeout(()=>{ renderFullAcronym(lines); swapBusy=false; }, outTotal);
-    }
+    function buildWrapper(lines){ const letters=['M','A','R','I','A','N','A']; const w=document.createElement('div'); lines.forEach((txt,i)=>{ const row=document.createElement('div'); const fx=FX_TYPES[Math.floor(Math.random()*FX_TYPES.length)]; row.className=`row fx-${fx} in`; row.dataset.fx=fx; row.style.setProperty('--d','0ms'); const chip=document.createElement('div'); chip.className='letter anim'; chip.style.setProperty('--delay','0ms'); chip.textContent=letters[i]||''; const span=document.createElement('div'); span.className='text'; span.textContent=txt; row.appendChild(chip); row.appendChild(span); w.appendChild(row); }); return w; }
+    function renderFullAcronym(lines){ const full=document.getElementById('acronymFull'); if(!full) return; const wrapper=buildWrapper(lines); const meas=full.cloneNode(false); meas.style.cssText='position:absolute; visibility:hidden; pointer-events:none; left:-9999px; top:0; height:auto;'; meas.style.width=full.clientWidth+'px'; meas.appendChild(wrapper.cloneNode(true)); full.parentNode.appendChild(meas); const newH=meas.scrollHeight; meas.remove(); const currentH=full.offsetHeight || 0; const targetH=Math.max(currentH, newH); full.style.height=targetH+'px'; full.innerHTML=''; full.appendChild(wrapper); requestAnimationFrame(()=>{ full.style.height=newH+'px'; }); const onEnd=e=>{ if(e.propertyName==='height'){ full.style.height='auto'; full.removeEventListener('transitionend',onEnd); } }; full.addEventListener('transitionend',onEnd); }
+    function swapAcronym(lines){ if(swapBusy) return; swapBusy=true; const full=document.getElementById('acronymFull'); const rows=[...full.querySelectorAll('.row')]; if(!rows.length){ renderFullAcronym(lines); swapBusy=false; return; } rows.forEach((r)=>{ r.classList.remove('in'); r.classList.add('out'); r.style.setProperty('--d','0ms'); }); const outTotal = 360; setTimeout(()=>{ renderFullAcronym(lines); swapBusy=false; }, outTotal); }
     function nextAcronym(){ currentSet=(currentSet+1)%ACRONYM_SETS.length; swapAcronym(ACRONYM_SETS[currentSet]); }
-
     const CYCLE_MS = 4000;
     window.addEventListener('load', ()=>{
       const why = document.getElementById('whyBtn');
       setInterval(()=>{ if(why) { why.classList.add('wiggle'); setTimeout(()=>why.classList.remove('wiggle'), 600); } }, 5200);
-
       digitarSequencial();
       setInterval(cycleEmoji, 5000);
-
       ACRONYM_SETS=makeAcronymSets(20);
       renderFullAcronym(ACRONYM_SETS[0]);
-
       let timer=setInterval(nextAcronym, CYCLE_MS);
-      document.addEventListener('visibilitychange', ()=>{
-        if(document.visibilityState==='visible'){ clearInterval(timer); timer=setInterval(nextAcronym, CYCLE_MS); }
-        else { clearInterval(timer); }
-      });
-
+      document.addEventListener('visibilitychange', ()=>{ if(document.visibilityState==='visible'){ clearInterval(timer); timer=setInterval(nextAcronym, CYCLE_MS); } else { clearInterval(timer); } });
       setupAutoplay();
     });
   </script>
