--- a/index.html
+++ b/index.html
@@ -54,47 +54,38 @@
 
   <style>
     /* ===== BASE ===== */
-    :root{ --bg-dim: .75; } /* escurece o preenchimento borrado p/ legibilidade */
+    :root{ --bg-dim: .75; }
 
     body{
       margin:0;
       min-height:100svh;
-      background:#000; /* fica por trás do blur */
+      background:#000;
       text-align:center;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
     }
 
-    /* Palco centraliza o conteúdo e carrega a imagem via CSS var --hero */
+    /* Palco + imagem (duas camadas) */
     .stage{
       position:relative;
       min-height:100svh;
       display:grid;
-      place-items:center;
+      place-items:center;       /* garante o card exatamente no centro */
       padding:clamp(16px,4vw,32px);
-      overflow:hidden; /* corta o blur que passa da tela */
+      overflow:hidden;
     }
-
-    /* Camadas de fundo */
     .bg{ position:absolute; inset:0; z-index:0; pointer-events:none; }
     .bg-fill, .bg-photo{ position:absolute; inset:0; background-position:center; background-repeat:no-repeat; }
-
-    /* preenchimento borrado com cover (preenche as laterais) */
     .bg-fill{
       background-size:cover;
       filter: blur(16px) brightness(var(--bg-dim));
-      transform: scale(1.05); /* evita borda do blur */
+      transform: scale(1.05);
     }
+    .bg-photo{ background-size:contain; }
 
-    /* foto nítida por cima, inteira (contain) */
-    .bg-photo{
-      background-size:contain;
-      /* sem blur; imagem por completo */
-    }
-
-    /* ===== CARD ===== */
+    /* ===== CARD (blur cinza) ===== */
     .card{
       position:relative;
-      z-index:2;
+      z-index:3;                            /* acima do acrônimo */
       width:min(600px,94vw);
       background:rgba(0,0,0,.55);
       color:#fff;
@@ -124,7 +115,6 @@
       text-shadow:0 1px 2px rgba(0,0,0,.55);
     }
     @keyframes blink-caret{ 50%{ border-color:transparent } }
-
     @media (min-width:1200px){
       h1.title{ font-size:48px; }
       .typing{ font-size:24px; }
@@ -141,6 +131,7 @@
     .btn:active{ transform:scale(.98) } .btn:hover{ filter:brightness(1.06) }
     .yes{ background:#4CAF50; color:#fff } .no{ background:#f44336; color:#fff } .why{ background:#ff9800; color:#fff; position:relative; overflow:visible }
 
+    /* Destaque do botão "Por que..." */
     .why.attn{ animation: why-pulse 1.4s ease-in-out infinite; box-shadow: 0 0 0 0 rgba(255,152,0,.55); }
     .why.attn::before{
       content:""; position:absolute; inset:-6px; border-radius:12px;
@@ -162,21 +153,32 @@
     }
     .btn .emo{ margin-left:.35em; display:inline-block; transform:translateY(1px) }
 
-    /* Modal */
+    /* ===== Modal ===== */
     .dialog-overlay{ display:none; position:fixed; inset:0; background:rgba(0,0,0,.5); justify-content:center; align-items:center; padding:16px; z-index:50; }
     .dialog-box{ width:min(460px,92vw); background:rgba(255,255,255,.96); border-radius:12px; padding:20px; text-align:center; box-shadow:0 12px 36px rgba(0,0,0,.35); backdrop-filter:blur(2px); }
     .dialog-box p{ margin:0 0 16px; font-size:18px; color:#333; white-space: pre-wrap; }
     .dialog-buttons{ display:flex; gap:12px; justify-content:center; }
     .dialog-buttons button{ padding:10px 18px; border:none; border-radius:8px; font-size:16px; cursor:pointer }
 
-    /* ===== Acrônimos (MARIANA) ===== */
+    /* ===== Acrônimo fora do card (sem fundo cinza) ===== */
     #acronymFull{
+      position:absolute;
+      left:50%;
+      transform:translateX(-50%);
+      bottom:clamp(16px,6vh,40px);      /* fixo na parte de baixo da tela */
+      z-index:2;                        /* abaixo do card, acima do fundo */
       width:min(860px,92vw);
-      margin:16px auto 0; padding:12px 16px;
-      background:rgba(255,255,255,.06); border-radius:12px;
-      font-size:clamp(15px,1.8vw,19px); line-height:1.6;
-      transition:height 180ms ease; will-change:height;
-      overflow:hidden; text-align:left;
+      margin:0;                         /* remove margens extra */
+      padding:0;                        /* remove “faixa” cinza */
+      background:transparent;           /* sem fundo */
+      border-radius:0;
+      font-size:clamp(15px,1.8vw,19px);
+      line-height:1.6;
+      text-align:left;
+      color:#fff;
+      text-shadow:0 1px 2px rgba(0,0,0,.4); /* legibilidade sobre a foto */
+      transition:height 180ms ease;
+      overflow:hidden;
     }
     #acronymFull .row{ display:flex; align-items:center; gap:10px; margin:2px 0; }
     #acronymFull .letter{
@@ -222,14 +224,15 @@
   </style>
 </head>
 <body>
-  <!-- Troque a imagem aqui (uma vez só) -->
+  <!-- Troque a imagem aqui -->
   <div class="stage" style="--hero: url('IMG_20250823_124847408.jpg')">
-    <!-- Fundo com duas camadas -->
+    <!-- Fundo -->
     <div class="bg" aria-hidden="true">
       <div class="bg-fill"  style="background-image: var(--hero);"></div>
       <div class="bg-photo" style="background-image: var(--hero);"></div>
     </div>
 
+    <!-- CARD centralizado -->
     <div class="card">
       <h1 class="title">Oi Mari <span id="emojiCycler" class="title-emoji" aria-hidden="true">😍</span></h1>
       <p id="textoDigitado" class="typing"></p>
@@ -244,9 +247,10 @@
         <button class="btn yes" onclick="aceitou()">Tenho chance! <span class="emo" role="img" aria-label="rosto apaixonado">🥰</span></button>
         <button class="btn no"  onclick="mostrarMensagemNao()">Não tenho chance! <span class="emo" role="img" aria-label="triste">🙁</span></button>
       </div>
-
-      <section id="acronymFull" aria-live="polite" aria-atomic="true"></section>
     </div>
+
+    <!-- Acrônimo fora do card, sem fundo -->
+    <section id="acronymFull" aria-live="polite" aria-atomic="true"></section>
   </div>
 
   <!-- Modal -->
@@ -264,7 +268,7 @@
   <audio id="feliznavida-audio" preload="auto" playsinline><source src="feliznavida.mp3" type="audio/mpeg"></source></audio>
   <audio id="sadsong-audio" preload="auto" playsinline><source src="sadsong.mp3" type="audio/mpeg"></source></audio>
 
-  <!-- ====== JS original (sem alterações) ====== -->
+  <!-- ====== JS (inalterado, só mantendo tudo funcionando) ====== -->
   <script>
     const AUTOPLAY_DELAY_MS = 3000;
     let bgmStarted = false;
